--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,9 @@
-Maze needs more walls
-* different maze generation algorithm
-background scrolls diagonally a little
+* background scrolls diagonally a little
+* Have both layers scroll identically on title screen to make it look like we have transparancy ;)
+* score
+* game over if you're too slow clearing a maze
+* sharks...
+* guys throwing physics objects from the top
+
+# bugs
+some invisible walls on the riight side
