--- a/todo.txt
+++ b/todo.txt
@@ -4,6 +4,7 @@
 * game over if you're too slow clearing a maze
 * a horizontal threat
 * balls explode the walls that they touch, so maze is more and more exposed as we go
+* use responsibility (louder square) as the ingame tune. Don't forget to change the sfx driver to avoid pcm2
 
 
 # bugs
