--- a/todo.txt
+++ b/todo.txt
@@ -1,11 +1,9 @@
 * background scrolls diagonally a little
 * Have both layers scroll identically on title screen to make it look like we have transparancy ;)
-* score
-* game over if you're too slow clearing a maze
-* balls explode the walls that they touch, so maze is more and more exposed as we go
 * use responsibility (louder square) as the ingame tune. Don't forget to change the sfx driver to avoid pcm2
-* sfx
-* less time in later levels
-
+* sfx, other music
+* less time in later levels, monster faster, more bombs
+* result screen
+* display maze number somewhere
 
 # bugs
