--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,12 @@
 * background scrolls diagonally a little
-* Have both layers scroll identically on title screen to make it look like we have transparancy ;)
+* title screen
+  - Have both layers scroll identically on title screen to make it look like we have transparancy ;)
+  - add a title
 * use responsibility (louder square) as the ingame tune. Don't forget to change the sfx driver to avoid pcm2
 * sfx, other music
 * less time in later levels, monster faster, more bombs
 * result screen
 * display maze number somewhere
+* remove dbg garbage
 
 # bugs
