--- a/todo.txt
+++ b/todo.txt
@@ -2,8 +2,10 @@
 * title screen
   - Have both layers scroll identically on title screen to make it look like we have transparancy ;)
   - add a title
-* use responsibility (louder square) as the ingame tune. Don't forget to change the sfx driver to avoid pcm2
-* sfx, other music
+* sfx, music
+  - use responsibility (louder square) as the ingame tune
+  - All by myself would be a good results screen tune. Maybe also title
+  - Don't forget to change the sfx driver to avoid pcm2
 * less time in later levels, monster faster, more bombs
 * result screen
 * display maze number somewhere
