start bug, adding sfx

--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,3 @@
-* title screen
-  - add a title
 * sfx, music
   - All by myself would be a good results screen tune. Maybe also title
   - Don't forget to change the sfx driver to avoid pcm2
@@ -7,5 +5,5 @@
 * result screen
 
 # bugs
-* memory leak. Exhausted after about 4 levels
+* memory leak. Exhausted after about 4 levels. WHile building maze walls
 * running out of vram
